--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,7 @@ body {
   width: 1840px;
   height: 455px;
   border-radius: 10px;
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
   margin: 36px 40px;
   display: flex;
   align-items: center;
@@ -39,10 +40,72 @@ body {
   flex-wrap: wrap;
 }
 
-.content__text {
+.content__description {
   width: 930px;
   height: 455px;
   background-color: rgb(235, 240, 250);
+  border-radius: 10px;
+}
+
+.content__text {
+  width: 538px;
+  height: 278px;
+  margin: 88.5px 320px 88.5px 72px;
+}
+
+.content__title {
+  width: 200px;
+  height: 48px;
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 500;
+  line-height: 160%;
+  color: rgb(41, 75, 138);
+  font-size: 30px;
+  text-shadow: 0 0.25px;
+  margin-bottom: 18px;
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
+}
+
+.content__subtitle {
+  width: 511px;
+  height: 108px;
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%;
+  color: rgb(114, 114, 114);
+  font-size: 17px;
+  margin-bottom: 36px;
+  word-break: break-word;
+}
+
+.content__btn {
+  width: 341px;
+  height: 68px;
+  border-radius: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: rgb(36, 76, 152);
+  font-family: 'Manrope';
+  font-style: normal;
+  font-weight: 500;
+  line-height: 160%;
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  text-shadow: 0px 0.25px;
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
+}
+
+.content__btn-img {
+  width: 44px;
+  height: 44px;
+  border-radius: 100%;
+  background: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .content__image-wrapp {
@@ -53,4 +116,5 @@ body {
 .content__image {
   width: 910px;
   height: 455px;
+  border-radius: 10px;
 }
