--- a/styles/style.css
+++ b/styles/style.css
@@ -62,7 +62,7 @@ body {
   line-height: 160%;
   color: rgb(41, 75, 138);
   font-size: 30px;
-  text-shadow: 0 0.25px;
+  text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 18px;
   -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
@@ -94,7 +94,7 @@ body {
   line-height: 160%;
   color: rgb(255, 255, 255);
   font-size: 18px;
-  text-shadow: 0px 0.25px;
+  text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
   -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
 
