--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  max-width: 1920px;
+  width: 100vw;
   font-family: 'Manrope';
 }
 
@@ -63,7 +63,7 @@ body {
 }
 
 .content__subtitle {
-  width: 470px;
+  width: 511px;
   height: 108px;
   font-family: 'Manrope';
   font-weight: 400;
@@ -125,7 +125,7 @@ body {
 
 @media (max-width: 1440px) {
   .content {
-    width: 1360px;
+    width: 1310px;
   }
 
   .content__description {
@@ -148,7 +148,7 @@ body {
   }
 
   .content__subtitle {
-    width: 470px;
+    width: 511px;
     height: 81px;
     font-family: 'Manrope';
     font-size: 17px;
@@ -191,7 +191,7 @@ body {
   }
 
   .content__subtitle {
-    width: 487px;
+    width: 672px;
     height: 48px;
     font-family: 'Manrope';
     font-size: 15px;
@@ -210,4 +210,7 @@ body {
     height: 360px;
     bottom: 0;
   }
+}
+
+@media (max-width: 375px) {
 }
