--- a/styles/style.css
+++ b/styles/style.css
@@ -110,12 +110,6 @@ body {
   background-size: cover;
   border-radius: 0px 10px 10px 0px;
 }
-/* 
-.content__image {
-  max-width: 100%;
-  height: 100%;
- 
-} */
 
 @media (max-width: 1560px) {
   .content__image-wrapp {
@@ -162,6 +156,11 @@ body {
     background: url('../images/image\ 15\ \(1\).png') no-repeat center;
     background-size: cover;
   }
+
+  .content__btn-img {
+    width: 36px;
+    height: 36px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -203,14 +202,61 @@ body {
   .content__btn {
     width: 261px;
     height: 56px;
+    font-family: 'Manrope';
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 160%;
   }
 
   .content__image-wrapp {
     width: 720px;
-    height: 360px;
+    height: 363px;
     bottom: 0;
   }
 }
 
 @media (max-width: 375px) {
+  .content {
+    width: 372px;
+    height: 482px;
+    margin: 0;
+  }
+
+  .content__description {
+    width: 372px;
+    height: 262px;
+  }
+
+  .content__text {
+    width: 279px;
+    height: 146px;
+  }
+
+  .content__title {
+    width: 279px;
+    height: 27px;
+    font-family: 'Manrope';
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 160%;
+  }
+
+  .content__subtitle {
+    width: 279px;
+    height: 105px;
+    font-family: 'Manrope';
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 160%;
+  }
+
+  .content__btn {
+    width: 279px;
+    height: 56px;
+  }
+
+  .content__image-wrapp {
+    width: 100%;
+    height: 224px;
+  }
 }
