--- a/styles/style.css
+++ b/styles/style.css
@@ -89,6 +89,7 @@ body {
   font-size: 18px;
   text-shadow: 0px 4px rgba(0, 0, 0, 0.25);
   -webkit-text-stroke: 1px rgb(0, 0, 0);
+  cursor: pointer;
 }
 
 .content__btn-img {
@@ -102,19 +103,13 @@ body {
 }
 
 .content__image-wrapp {
-  width: 910px;
+  width: 50%;
   height: 456px;
   position: absolute;
   right: 0;
   background: url('../images/image\ 15.png') no-repeat center;
   background-size: cover;
   border-radius: 0px 10px 10px 0px;
-}
-
-@media (max-width: 1560px) {
-  .content__image-wrapp {
-    width: 55%;
-  }
 }
 
 @media (max-width: 1440px) {
