--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body {
   font-family: 'Manrope';
 }
 
-.content {
+.content.hidden {
   height: 455px;
   position: relative;
   border-radius: 10px;
@@ -112,6 +112,217 @@ body {
   border-radius: 0px 10px 10px 0px;
 }
 
+.modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal__form {
+  position: relative;
+  width: 500px;
+  height: 573px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: rgb(240, 244, 252);
+}
+
+form {
+  width: 452px;
+  height: 527px;
+  position: relative;
+}
+
+.btn__close {
+  position: absolute;
+  width: 100%;
+  height: 52px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-bottom: 4px;
+}
+
+.close {
+  width: 52px;
+  height: 52px;
+  border-radius: 10px;
+  background: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.form__content-wrapp {
+  position: absolute;
+  width: 100%;
+  height: 469px;
+  display: flex;
+  flex-direction: column;
+}
+
+.form__description {
+  color: rgb(50, 50, 50);
+  font-family: 'Manrope';
+  font-size: 24px;
+  font-weight: 500;
+  text-align: left;
+  margin-bottom: 18px;
+  margin-top: 56px;
+}
+
+.login {
+  position: absolute;
+  width: 100%;
+  height: 73px;
+  top: 107px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 24px;
+  border-radius: 10px;
+  background: rgb(215, 226, 246);
+  color: rgb(31, 66, 132);
+  font-family: 'Manrope';
+  font-size: 18px;
+  font-weight: 500;
+  line-height: -1px;
+  margin-bottom: 4px;
+}
+
+.password {
+  position: absolute;
+  width: 100%;
+  height: 73px;
+  top: 184px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  padding: 24px;
+  border-radius: 10px;
+  background: rgb(215, 226, 246);
+  color: rgb(31, 66, 132);
+  font-family: 'Manrope';
+  font-size: 18px;
+  font-weight: 500;
+  line-height: -1px;
+  margin-bottom: 24px;
+}
+
+.login:focus,
+.password:focus {
+  outline: none;
+}
+
+.checkbox__wrapp {
+  position: absolute;
+  width: 100%;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  top: 281px;
+  margin-bottom: 24px;
+}
+
+.checkbox {
+  width: 18px;
+  height: 18px;
+  margin-right: 7px;
+  border: 2px solid rgb(50, 50, 50);
+  cursor: pointer;
+}
+
+.checkbox__description {
+  color: rgb(50, 50, 50);
+  font-family: 'Manrope';
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.restore {
+  position: absolute;
+  width: 139px;
+  height: 27px;
+  top: 330px;
+  color: rgb(36, 76, 152);
+  font-family: 'Manrope';
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-bottom: 36px;
+  cursor: pointer;
+}
+
+.restore:active {
+  color: rgb(24, 57, 119);
+}
+
+.submit {
+  position: absolute;
+  width: 100%;
+  height: 64px;
+  top: 393px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 18px 12px 18px 12px;
+  border-radius: 4px;
+  background: rgb(36, 76, 152);
+  color: rgb(255, 255, 255);
+  font-family: 'Manrope';
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 160%;
+  margin-bottom: 4px;
+  cursor: pointer;
+}
+
+.submit:active {
+  background: rgb(24, 57, 119);
+}
+
+.join {
+  position: absolute;
+  width: 100%;
+  height: 64px;
+  top: 461px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 18px 12px 18px 12px;
+  border: 1px solid rgb(36, 76, 152);
+  border-radius: 4px;
+  color: rgb(36, 76, 152);
+  font-family: 'Manrope';
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 160%;
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+
+.join:active {
+  border: 2px solid grey;
+}
+
+.close .visible {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
+
 @media (max-width: 1440px) {
   .content {
     width: 1310px;
@@ -168,6 +379,7 @@ body {
   .content__description {
     width: 720px;
     height: 226px;
+    border-radius: 10px;
   }
 
   .content__text {
@@ -220,6 +432,7 @@ body {
   .content__description {
     width: 372px;
     height: 262px;
+    border-radius: 0;
   }
 
   .content__text {
