--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ body {
   font-family: 'Manrope';
 }
 
-.content.hidden {
+.content {
   height: 455px;
   position: relative;
   border-radius: 10px;
@@ -103,7 +103,7 @@ body {
 }
 
 .content__image-wrapp {
-  width: 50%;
+  width: 52%;
   height: 456px;
   position: absolute;
   right: 0;
@@ -117,7 +117,7 @@ body {
   width: 100%;
   height: 100%;
   background: rgb(0, 0, 0, 0.8);
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
 }
@@ -315,8 +315,8 @@ form {
   border: 2px solid grey;
 }
 
-.close .visible {
-  display: block;
+.visible {
+  display: flex;
 }
 
 .hidden {
@@ -419,6 +419,11 @@ form {
     width: 720px;
     height: 363px;
     bottom: 0;
+  }
+
+  .modal__form {
+    width: 100%;
+    height: 100%;
   }
 }
 
