--- a/styles/style.css
+++ b/styles/style.css
@@ -410,6 +410,11 @@ form {
     width: 100%;
     height: 100%;
   }
+
+  form {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media (max-width: 375px) {
